--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "@hono/node-server": "^1",
     "frog": "latest",
     "got": "^14.2.1",
-    "hono": "^4"
-  },
-  "devDependencies": {
+    "hono": "^4",
     "@types/node": "^20.11.17",
     "tsx": "^3.12.2"
   }
