--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "dev": "frog dev",
     "serve": "tsx src/index.tsx",
-    "host": "node src/index.js" 
+    "host": "node src/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1",
+    "@thi.ng/base-n": "^2.7.12",
+    "@types/node": "^20.11.17",
     "frog": "latest",
     "got": "^14.2.1",
     "hono": "^4",
-    "@types/node": "^20.11.17",
     "tsx": "^3.12.2"
   }
 }
